# VSCode-Settings

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/instructions/: python.instructions.md
.github/prompts/: multi-stage-dockerfile.prompt.md
.github/skills/agent-evaluation/: SKILL.md
.github/skills/create-command/: SKILL.md
.github/skills/gpt-researcher/: SKILL.md
.github/skills/gpt-researcher/references/: adding-features.md  advanced-patterns.md  api-reference.md  components.md  deep-research.md  flows.md  retrievers.md
.github/skills/scientific-writing/: SKILL.md
.github/workflows/: docker-build-check-ci.yml  python-code-quality-ci.yml  python-linter.yml  python-pyright-ci.yml  python-ruff-ci.yml
scripts/: .gitignore  copy_skills.ipynb  pytorch_env_check.ipynb  tensorflow_env_check.ipynb
snippets/: MyCodeSnippets.code-snippets
src/pyright-action-ci-test/: pyright-action-ci-test.ipynb  pyright-action-ci-test.py
src/ruff-action-ci-test/: ruff-action-ci-test.ipynb  ruff-action-ci-test.py
