[project]
name = "workspace"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    # PyTorch
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "torchsummary",
    # Machine Learning / Deep Learning
    "skorch==1.2.0", # # Support of PyTorch 2.5.1, 2.6.0, 2.7.1, 2.8.0 versions.
    "scikit-learn",
    "transformers",
    "kagglehub",
    # Jupyter + Notebook
    "notebook",
    "ipywidgets",
    "pylatexenc",
    # Others
    "tqdm",
    "seaborn",
    "openpyxl",
]

[dependency-groups]
dev = [
    # Development Tools
    "pre-commit",
    "pyright",
    "pytest",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.pyright]
# TODO: Change this to your actual virtual environment path
venvPath = "/opt"
venv = ".venv"

[tool.ruff]
lint.select = ["E", "F", "I", "N", "B", "Q"]
lint.ignore = [
    # Style / Formatting
    "E501", # Line too long

    # Naming Conventions
    "N802", # Function name should be lowercase
    "N812", # Lowercase imports that are aliased to non-lowercase names

    # Docstring
    "D100", # Missing function docstring
    "D101", # Missing class docstring
    "D102", # Missing method docstring
    "D103", # Missing function docstring (overriding)
    "D104", # Missing public method docstring
    "D105", # Missing private method docstring
    "D107", # Missing __init__ docstring

    # Complexity / Best Practices
    "C901", # Function or method too complex
    "B901", # Usage of deprecated function or method

    # Miscellaneous
    "T201", # print statement found
    "S101", # assert statement found
]
